# chaos-api

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
contributing/: index.html
examples/: client.py
search/: search_index.json
src/chaos_api/: __init__.py  config.py  llm_client.py  main.py  middleware.py  mime_handlers.py  prompt_builder.py  routes.py
tests/: __init__.py  conftest.py  test_llm_client.py  test_main.py  test_mime_handlers.py  test_prompt_builder.py  test_routes.py
